5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1635_1053.log
== TEST (2019-04-08 15:17:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input ("digite o nome ")
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:19:58) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo"
	mensagem = "cervo eh patrono do Harry Potter"
-- ERROR:
File "XXXX", line 3
    if nome == "cervo"
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:20:29) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
-- ERROR:
File "XXXX", line 3
    if nome == "cervo"
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:21:19) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
-- ERROR:
File "XXXX", line 3
    if nome == "cervo"
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:22:13) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
	
print (mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:22:24) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
	
print (mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:22:38) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
	
print (mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:22:43) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
	
print (mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:22:45) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
	
print (mensagem)
-- EXECUTION TIME:
0.185632
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:23:32) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
	
print (nome + mensagem)
-- OUTPUT:
cervocervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:23:49) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
	
print (nome + mensagem)
-- OUTPUT:
cervocervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:24:11) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
	
print (nome + mensagem)
-- OUTPUT:
cervocervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:25:10) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = (nome + "nao eh patrono do Harry Potter")
	
print (nome + mensagem)
-- OUTPUT:
cervocervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:25:24) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = (nome + "nao eh patrono do Harry Potter")
	
print (mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:25:32) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = (nome + "nao eh patrono do Harry Potter")
	
print (mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:26:35) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
	
print (nome + mensagem)
-- OUTPUT:
cervocervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:26:48) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
	
print (nome + mensagem)
-- OUTPUT:
cervocervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:28:04) 
-- CODE:
nome = input (" digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
	
print (nome + mensagem)
-- OUTPUT:
cervocervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:28:11) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
	
print (nome + mensagem)
-- OUTPUT:
cervocervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:28:32) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = "nao eh patrono do Harry Potter"
	
print (nome + mensagem)
-- OUTPUT:
cervocervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:29:53) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = "nao eh patrono do Harry Potter"
	
print (mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:30:07) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = "nao eh patrono do Harry Potter"
	
print (nome + mensagem)
-- OUTPUT:
cervocervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:31:37) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = "nao eh patrono do Harry Potter"
	
print (nome + "" + mensagem)
-- OUTPUT:
cervocervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:31:47) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = "nao eh patrono do Harry Potter"
	
print (nome + " " + mensagem)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:32:13) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = " nao eh patrono do Harry Potter"
	
print (nome + mensagem)
-- OUTPUT:
cervocervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:32:31) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = " nao eh patrono do Harry Potter"
	
print (nome + mensagem)
-- EXECUTION TIME:
0.222807
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervocervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:32:33) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = " nao eh patrono do Harry Potter"
	
print (nome + mensagem)
-- OUTPUT:
cervocervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:32:36) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = " nao eh patrono do Harry Potter"
	
print (nome + mensagem)
-- EXECUTION TIME:
0.171894
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervocervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:32:42) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = " nao eh patrono do Harry Potter"
	
print (nome + mensagem)
-- OUTPUT:
cervocervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:32:55) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = "nao eh patrono do Harry Potter"
	
print (nome + " " + mensagem)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:33:01) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = "nao eh patrono do Harry Potter"
	
print (nome + " " + mensagem)
-- EXECUTION TIME:
0.17732
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:34:22) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = " nao eh patrono do Harry Potter"
	
print (nome + " " + mensagem)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:34:31) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = " nao eh patrono do Harry Potter"
	
print (nome + " " + mensagem)
-- EXECUTION TIME:
0.197214
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode  nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:34:36) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = " nao eh patrono do Harry Potter"
	
print (nome + " " + mensagem)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:35:00) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = "nao eh patrono do Harry Potter"
	
print (nome + " " + mensagem)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:35:01) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = "nao eh patrono do Harry Potter"
	
print (nome + " " + mensagem)
-- EXECUTION TIME:
0.135894
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:35:03) 
-- CODE:
nome = input ("digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = "nao eh patrono do Harry Potter"
	
print (nome + " " + mensagem)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:35:16) 
-- CODE:
nome = input (" digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = "nao eh patrono do Harry Potter"
	
print (nome + " " + mensagem)
-- EXECUTION TIME:
0.148277
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:35:17) 
-- CODE:
nome = input (" digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = "nao eh patrono do Harry Potter"
	
print (nome + " " + mensagem)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:36:27) 
-- CODE:
nome = input (" digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = "nao eh patrono do Harry Potter"
	
print ( nome + " " + mensagem)
-- EXECUTION TIME:
0.144469
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:37:07) 
-- CODE:
nome = input (" digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = "nao eh patrono do Harry Potter"
	
print ( nome + " " + mensagem)
print (nome + mensagem)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter
cervocervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:37:21) 
-- CODE:
nome = input (" digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = " nao eh patrono do Harry Potter"
	
print ( nome + " " + mensagem)
print (nome + mensagem)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter
cervocervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:37:35) 
-- CODE:
nome = input (" digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = " nao eh patrono do Harry Potter"
	
print ( nome + " " + mensagem)
print (nome + mensagem)
-- EXECUTION TIME:
0.217745
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do Harry Potter
cervocervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode  nao eh patrono do Harry Potter
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:38:15) 
-- CODE:
nome = input (" digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = "nao eh patrono do Harry Potter"
	
print ( nome + " " + mensagem)

-- OUTPUT:
cervo cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:38:22) 
-- CODE:
nome = input (" digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = "nao eh patrono do Harry Potter"
	
print ( nome + " " + mensagem)

-- EXECUTION TIME:
0.153099
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:38:26) 
-- CODE:
nome = input (" digite o nome ")

if nome == "cervo":
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = "nao eh patrono do Harry Potter"
	
print ( nome + " " + mensagem)

-- OUTPUT:
cervo cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:39:23) 
-- CODE:
nome = input (" digite o nome ")

if nome != "cervo":
	mensagem = " nao eh patrono do Harry Potter"
else :
	mensagem = " cervo eh patrono do Harry Potter"
	
print ( nome + " " + mensagem)

-- OUTPUT:
cervo  cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:39:36) 
-- CODE:
nome = input (" digite o nome ")

if nome != "cervo":
	mensagem = " nao eh patrono do Harry Potter"
else :
	mensagem = " cervo eh patrono do Harry Potter"
	
print ( nome + " " + mensagem)

-- OUTPUT:
cervo  cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:39:37) 
-- CODE:
nome = input (" digite o nome ")

if nome != "cervo":
	mensagem = " nao eh patrono do Harry Potter"
else :
	mensagem = " cervo eh patrono do Harry Potter"
	
print ( nome + " " + mensagem)

-- EXECUTION TIME:
0.199477
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo  cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode  nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:39:54) 
-- CODE:
nome = input (" digite o nome ")

if nome != "cervo":
	mensagem = " nao eh patrono do Harry Potter"
else :
	mensagem = " cervo eh patrono do Harry Potter"
	
print (nome + mensagem)

-- OUTPUT:
cervo cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:40:18) 
-- CODE:
nome = input (" digite o nome ")

if nome != "cervo":
	mensagem = " nao eh patrono do Harry Potter"
else :
	mensagem = " cervo eh patrono do Harry Potter"
	
print (nome + mensagem)

-- EXECUTION TIME:
0.283505
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:40:44) 
-- CODE:
nome = input(" digite o nome ")

if nome != "cervo":
	mensagem = " nao eh patrono do Harry Potter"
else :
	mensagem = " cervo eh patrono do Harry Potter"
	
print (nome + mensagem)

-- OUTPUT:
cervo cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:40:48) 
-- CODE:
nome = input(" digite o nome ")

if nome != "cervo":
	mensagem = " nao eh patrono do Harry Potter"
else :
	mensagem = " cervo eh patrono do Harry Potter"
	
print (nome + mensagem)

-- EXECUTION TIME:
0.127283
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:41:15) 
-- CODE:
nome = input(" digite o nome ")

if nome != "cervo":
	mensagem = " nao eh patrono do Harry Potter"
else :
	mensagem = " cervo eh patrono do Harry Potter"
	
print (nome + mensagem)

-- OUTPUT:
cervo cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:41:42) 
-- CODE:
nome = input(" digite o nome ")

if nome != "cervo":
	mensagem = " nao eh patrono do Harry Potter"
else :
	mensagem = "cervo eh patrono do Harry Potter"
	
print (nome + mensagem)

-- OUTPUT:
cervocervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:41:50) 
-- CODE:
nome = input(" digite o nome ")

if nome != "cervo":
	mensagem = " nao eh patrono do Harry Potter"
else :
	mensagem = "cervo eh patrono do Harry Potter"
	
print (nome + mensagem)

-- EXECUTION TIME:
0.295549
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervocervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:42:10) 
-- CODE:
nome = input(" digite o nome ")

if nome != "cervo":
	mensagem = " nao eh patrono do Harry Potter"
else :
	mensagem = "cervo eh patrono do Harry Potter"
	
print (nome + mensagem)

-- OUTPUT:
cervocervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:42:20) 
-- CODE:
nome = input(" digite o nome ")

if nome != "cervo":
	mensagem = " nao eh patrono do Harry Potter"
else :
	mensagem = "cervo eh patrono do Harry Potter"
	
print (nome + mensagem)

-- OUTPUT:
cervocervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:42:54) 
-- CODE:
nome = input(" digite o nome ")

if nome != "cervo":
	mensagem = " nao eh patrono do Harry Potter"
else :
	mensagem = "eh patrono do Harry Potter"
	
print (nome + mensagem)

-- OUTPUT:
cervoeh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:43:07) 
-- CODE:
nome = input(" digite o nome ")

if nome != "cervo":
	mensagem = " nao eh patrono do Harry Potter"
else :
	mensagem = " eh patrono do Harry Potter"
	
print (nome + mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:43:14) 
-- CODE:
nome = input(" digite o nome ")

if nome != "cervo":
	mensagem = " nao eh patrono do Harry Potter"
else :
	mensagem = " eh patrono do Harry Potter"
	
print (nome + mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:43:20) 
-- CODE:
nome = input(" digite o nome ")

if nome != "cervo":
	mensagem = " nao eh patrono do Harry Potter"
else :
	mensagem = " eh patrono do Harry Potter"
	
print (nome + mensagem)

-- EXECUTION TIME:
0.135528
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
